--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "ms": "^2.1.3",
@@ -23,7 +28,8 @@
     "nodemailer": "^7.0.10",
     "qs": "^6.14.0",
     "streamifier": "^0.1.1",
-    "validator": "^13.15.20"
+    "validator": "^13.15.20",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
